--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vintage Webshop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Righteous&family=Black+Ops+One&family=Bungee+Shade&family=Permanent+Marker&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,7 +17,7 @@
         body {
             background-color: #2a2a2a;
             color: #fff;
-            font-family: system-ui, -apple-system, sans-serif;
+            font-family: 'Bebas Neue', 'Impact', system-ui, -apple-system, sans-serif;
         }
 
         /* Navigation */
@@ -30,8 +33,11 @@
         nav a {
             color: #fff;
             text-decoration: none;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             transition: all 0.2s;
+            font-family: 'Righteous', 'Impact', sans-serif;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
         }
 
         nav a:hover,
@@ -70,6 +76,20 @@
             aspect-ratio: 3/4;
             object-fit: cover;
             display: block;
+            image-rendering: pixelated;
+            image-rendering: -moz-crisp-edges;
+            image-rendering: crisp-edges;
+            filter: contrast(1.2) saturate(0.8);
+        }
+
+        .webshop ul.items li img:not(.sold-out) {
+            transform: scale(0.95);
+            transition: transform 0.3s ease;
+        }
+
+        .webshop ul.items li:hover img:not(.sold-out) {
+            transform: scale(1);
+            filter: contrast(1.3) saturate(0.9);
         }
 
         /* Pricing */
@@ -77,7 +97,9 @@
             text-align: center;
             padding: 0.75rem 0;
             color: #999;
-            font-size: 0.9rem;
+            font-size: 1.3rem;
+            font-family: 'Rubik Mono One', monospace;
+            letter-spacing: 0.05em;
         }
 
         /* Sale items */
@@ -86,7 +108,9 @@
             justify-content: center;
             gap: 0.5rem;
             padding: 0.75rem 0;
-            font-size: 0.9rem;
+            font-size: 1.3rem;
+            font-family: 'Rubik Mono One', monospace;
+            letter-spacing: 0.05em;
         }
 
         li.on-sale .old-price {
@@ -106,12 +130,13 @@
             left: -20%;
             width: 50%;
             height: 12%;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 40"><rect fill="%23ff0000" width="200" height="40"/><text x="100" y="27" font-family="Arial" font-size="20" font-weight="bold" fill="white" text-anchor="middle">SALE</text></svg>');
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 40"><rect fill="%23ff00ff" width="200" height="40"/><text x="100" y="28" font-family="Impact" font-size="24" font-weight="bold" fill="yellow" text-anchor="middle" stroke="black" stroke-width="1">SALE!!!</text></svg>');
             background-size: 100%;
             background-repeat: no-repeat;
             transform: rotate3d(0, 0, 1, -40deg);
             transform-origin: top center;
             pointer-events: none;
+            filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.8));
         }
 
         /* Sold out overlay */
@@ -166,7 +191,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-1">
-                        <img src="https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?w=400&h=533&fit=crop" alt="Vintage Silk Dress 1960s">
+                        <img src="https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?w=80&h=107&fit=crop&q=10&blur=1" alt="Vintage Silk Dress 1960s">
                     </a>
                     <div class="pricing">$245</div>
                 </li>
@@ -174,7 +199,7 @@
                 <!-- Sale item -->
                 <li class="on-sale">
                     <a href="#product-2">
-                        <img src="https://images.unsplash.com/photo-1539533018447-63fcce2678e3?w=400&h=533&fit=crop" alt="Wool Coat 1970s">
+                        <img src="https://images.unsplash.com/photo-1539533018447-63fcce2678e3?w=80&h=107&fit=crop&q=10&blur=1" alt="Wool Coat 1970s">
                     </a>
                     <div class="price-change">
                         <span class="old-price">$380</span>
@@ -185,8 +210,8 @@
                 <!-- Sold out item -->
                 <li>
                     <a href="#product-3">
-                        <img src="https://images.unsplash.com/photo-1544957992-20514f595d6f?w=400&h=533&fit=crop" alt="Leather Handbag 1980s">
-                        <img class="sold-out" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Crect fill='white' stroke='black' stroke-width='4' width='200' height='60'/%3E%3Ctext x='100' y='38' font-family='Arial' font-size='20' font-weight='bold' fill='black' text-anchor='middle'%3ESOLD OUT%3C/text%3E%3C/svg%3E" alt="Sold Out">
+                        <img src="https://images.unsplash.com/photo-1544957992-20514f595d6f?w=80&h=107&fit=crop&q=10&blur=1" alt="Leather Handbag 1980s">
+                        <img class="sold-out" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Crect fill='white' stroke='black' stroke-width='4' width='200' height='60'/%3E%3Ctext x='100' y='38' font-family='Impact' font-size='22' font-weight='bold' fill='black' text-anchor='middle'%3ESOLD OUT%3C/text%3E%3C/svg%3E" alt="Sold Out">
                     </a>
                     <div class="pricing">$195</div>
                 </li>
@@ -194,7 +219,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-4">
-                        <img src="https://images.unsplash.com/photo-1583292650898-7d22cd27ca6f?w=400&h=533&fit=crop" alt="Evening Gown 1950s">
+                        <img src="https://images.unsplash.com/photo-1583292650898-7d22cd27ca6f?w=80&h=107&fit=crop&q=10&blur=1" alt="Evening Gown 1950s">
                     </a>
                     <div class="pricing">$420</div>
                 </li>
@@ -202,7 +227,7 @@
                 <!-- Sale item -->
                 <li class="on-sale">
                     <a href="#product-5">
-                        <img src="https://images.unsplash.com/photo-1591369822096-ffd140ec948f?w=400&h=533&fit=crop" alt="Tweed Blazer 1970s">
+                        <img src="https://images.unsplash.com/photo-1591369822096-ffd140ec948f?w=80&h=107&fit=crop&q=10&blur=1" alt="Tweed Blazer 1970s">
                     </a>
                     <div class="price-change">
                         <span class="old-price">$210</span>
@@ -213,7 +238,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-6">
-                        <img src="https://images.unsplash.com/photo-1582735689369-4fe89db7114c?w=400&h=533&fit=crop" alt="Silk Scarf Collection">
+                        <img src="https://images.unsplash.com/photo-1582735689369-4fe89db7114c?w=80&h=107&fit=crop&q=10&blur=1" alt="Silk Scarf Collection">
                     </a>
                     <div class="pricing">$85</div>
                 </li>
@@ -221,8 +246,8 @@
                 <!-- Sold out item -->
                 <li>
                     <a href="#product-7">
-                        <img src="https://images.unsplash.com/photo-1490481651871-ab68de25d43d?w=400&h=533&fit=crop" alt="Designer Heels 1980s">
-                        <img class="sold-out" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Crect fill='white' stroke='black' stroke-width='4' width='200' height='60'/%3E%3Ctext x='100' y='38' font-family='Arial' font-size='20' font-weight='bold' fill='black' text-anchor='middle'%3ESOLD OUT%3C/text%3E%3C/svg%3E" alt="Sold Out">
+                        <img src="https://images.unsplash.com/photo-1490481651871-ab68de25d43d?w=80&h=107&fit=crop&q=10&blur=1" alt="Designer Heels 1980s">
+                        <img class="sold-out" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Crect fill='white' stroke='black' stroke-width='4' width='200' height='60'/%3E%3Ctext x='100' y='38' font-family='Impact' font-size='22' font-weight='bold' fill='black' text-anchor='middle'%3ESOLD OUT%3C/text%3E%3C/svg%3E" alt="Sold Out">
                     </a>
                     <div class="pricing">$165</div>
                 </li>
@@ -230,7 +255,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-8">
-                        <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=400&h=533&fit=crop" alt="Vintage Sunglasses">
+                        <img src="https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?w=80&h=107&fit=crop&q=10&blur=1" alt="Vintage Sunglasses">
                     </a>
                     <div class="pricing">$125</div>
                 </li>
@@ -238,7 +263,7 @@
                 <!-- Sale item -->
                 <li class="on-sale">
                     <a href="#product-9">
-                        <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=400&h=533&fit=crop" alt="Denim Jacket 1980s">
+                        <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=80&h=107&fit=crop&q=10&blur=1" alt="Denim Jacket 1980s">
                     </a>
                     <div class="price-change">
                         <span class="old-price">$145</span>
@@ -249,7 +274,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-10">
-                        <img src="https://images.unsplash.com/photo-1509631179647-0177331693ae?w=400&h=533&fit=crop" alt="Vintage Hat">
+                        <img src="https://images.unsplash.com/photo-1509631179647-0177331693ae?w=80&h=107&fit=crop&q=10&blur=1" alt="Vintage Hat">
                     </a>
                     <div class="pricing">$95</div>
                 </li>
@@ -257,7 +282,7 @@
                 <!-- Sale item -->
                 <li class="on-sale">
                     <a href="#product-11">
-                        <img src="https://images.unsplash.com/photo-1551488831-00ddcb6c6bd3?w=400&h=533&fit=crop" alt="Pearl Necklace">
+                        <img src="https://images.unsplash.com/photo-1551488831-00ddcb6c6bd3?w=80&h=107&fit=crop&q=10&blur=1" alt="Pearl Necklace">
                     </a>
                     <div class="price-change">
                         <span class="old-price">$320</span>
@@ -268,7 +293,7 @@
                 <!-- Regular item -->
                 <li>
                     <a href="#product-12">
-                        <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a8ca0?w=400&h=533&fit=crop" alt="Vintage Boots">
+                        <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a8ca0?w=80&h=107&fit=crop&q=10&blur=1" alt="Vintage Boots">
                     </a>
                     <div class="pricing">$185</div>
                 </li>
